[project]
name = "telemetryd"
version = "0.1.0"
description = "Asynchronous SNMP telemetry daemon for printer metrics"
requires-python = ">=3.12"
readme = "README.md"

dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
